Style: Navbar drop down menu and set to hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header {
     background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
-    z-index: 99;
+    z-index: 98;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
 }
@@ -52,6 +52,17 @@ list-style-type: none;
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* Navbar styles with dropdown toggle */
+nav {
+    background-color: #ffffff;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
 }
 
 /* Main Content */
