--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,13 @@ footer {
     background-color: orange;
 }
 
+#footer-links {
+    font-size: 200%;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
 
