--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,7 @@ main {
     color: #ffffff;
     background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
+    border-radius: 5px;
 }
 
 #signup-form > h2 {
@@ -239,18 +240,21 @@ main {
 .radio-buttons {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .join-button {
     margin-top: 20px;
     padding: 15px 32px;
-    border-radius: 2px;
-    background-color: #454b1b;
+    border-radius: 5px;
+    background-color: #f16c6b;
     color: #fafafa;
     font-size: 100%;
+    border-color: #fafafa;
 }
+
 /* Footer */
+
 #social-networks {
     text-align: center;
     padding: 20px 0;
@@ -338,6 +342,28 @@ main {
     #photos {
         column-count: 3;
     }
+
+    /* Sign-Up Form */
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #f16c6b;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -352,6 +378,11 @@ main {
     #photos {
         column-count: 4;
 }
+
+    /* Sign-Up Form */
+    #signup-form {
+        top: 100px;
+    }
 
 /* Large devices (laptops and desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
