Fix: Make sign up form responsive on screens 768px and up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,9 +351,7 @@ main {
 
     #signup-form {
         max-width: 400px;
-        position: absolute;
-        left: 10%;
-        top: 150px;
+        margin-top: 45px;
     }
 
     .text-input:hover {
